src/Standards/Generic/Tests/NamingConventions/InterfaceNameSuffixUnitTest.inc
<?php

interface SomeNameInterface
{

}

interface ISomeName // error
{

}

interface ISomeNameInterface
{

}


interface ISomeOtherNameinterface
{

}

interface mInterface
{

}
